objects/vlocity_cmt__SyncDeltaSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__EndDeltaIdx__c</fullName>
        <label>End Delta Idx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDeltaIdx__c</fullName>
        <label>Start Delta Idx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UnmergedSyncDeltas__c</fullName>
        <label>Unmerged Sync Deltas</label>
        <type>TextArea</type>
    </fields>
    <label>Sync Delta Snapshot</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sync Delta Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Delta Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>